# TwentyGameSolver

./: CMakeLists.txt  README.md  TwentyGameSolver.sln
TwentyGameSolver/: CMakeLists.txt  GameSolver.cpp  GameSolver.h  InputNumbers.cpp  InputNumbers.h  Results.cpp  Results.h  TwentyGameSolver.vcxproj  TwentyGameSolver.vcxproj.filters  Util.h  ValidExpressions.cpp  ValidExpressions.h  main.cpp
