PROJECT(TwentyGameSolver)

cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)

SET(CMAKE_BUILD_TYPE Release)

# This is in case we ever need to know if we were creating a VS or Xcode project
IF(CMAKE_GENERATOR MATCHES "Visual Studio 8")
  SET(GENERATING_IDE_MAKEFILE 1)
ELSEIF(CMAKE_GENERATOR MATCHES "Xcode")
  SET(GENERATING_IDE_MAKEFILE 1)
ENDIF(CMAKE_GENERATOR MATCHES "Visual Studio 8")

IF(WIN32)
  ADD_DEFINITIONS( -D "_UNICODE")
  SET( CMAKE_MFC_FLAG 0 )
ENDIF(WIN32)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCE_FILES *.cpp)

ADD_EXECUTABLE(TwentyGameSolver ${SOURCE_FILES} ${HEADERS} )

INCLUDE_DIRECTORIES( ${PROJECT_BINARY_DIR} )
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR} )

TARGET_COMPILE_FEATURES(TwentyGameSolver PRIVATE cxx_range_for)

IF(WIN32)
	SET_TARGET_PROPERTIES(TwentyGameSolver PROPERTIES COMPILE_FLAGS /Zc:wchar_t-)
ENDIF(WIN32)

